--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,55 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: #ffffff;
+  max-height: 20vh;
+  max-width: 100vw;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: rgb(0, 0, 0);
+}
+
+.App-body{
+  max-height: 80vh;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: left;
+}
+
+.App-bodycolumn{
+  max-height: 80vh;
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
+  justify-content: left;
 }
 
 .App-link {
-  color: #61dafb;
+  color: #F0980B;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App-button{
+  background-color: #F0980B;
+  color: #ffffff;
+  border-radius: 4px;
+  border: none;
+  padding: 2vh 3vw;
+}
+
+.Form-block{
+  background-color: white;
+}
+
+.Form-title{
+  color: #F0980B;
+}
+
+.App-image{
+  height: auto;
+  width: auto;
+  max-height: 15vh;
+  max-width: 85vw;
+  padding: 4vh 3vw;
 }
