--- a/src/App.css
+++ b/src/App.css
@@ -1,55 +1,87 @@
 .App-header {
   background-color: #ffffff;
-  max-height: 20vh;
+  padding-top: 1vh;
+  height: 16vh;
+  width: 100vw;
+  max-height: 16vh;
   max-width: 100vw;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: rgb(0, 0, 0);
 }
 
-.App-body{
-  max-height: 80vh;
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  justify-content: left;
-}
-
-.App-bodycolumn{
-  max-height: 80vh;
-  display: flex;
-  align-items: flex-start;
-  flex-direction: column;
-  justify-content: left;
-}
-
-.App-link {
-  color: #F0980B;
-}
-
-.App-button{
-  background-color: #F0980B;
-  color: #ffffff;
-  border-radius: 4px;
-  border: none;
-  padding: 2vh 3vw;
-}
-
-.Form-block{
-  background-color: white;
-}
-
-.Form-title{
-  color: #F0980B;
-}
-
-.App-image{
+.App-image {
   height: auto;
   width: auto;
   max-height: 15vh;
   max-width: 85vw;
-  padding: 4vh 3vw;
 }
+
+.App-body {
+  height: 80vh;
+  width: 100vw;
+  max-height: 80vh;
+  max-width: 100vw;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: left;
+  background-color: #ffffff;
+}
+
+.App-formcolumn {
+  height: 80vh;
+  width: 80vw;
+  max-height: 80vh;
+  max-width: 80vw;
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
+  justify-content: left;
+  background-color: #ffffff;
+  font-size: medium;
+}
+
+.App-stationscolumn {
+  height: 80vh;
+  width: 80vw;
+  max-height: 80vh;
+  max-width: 80vw;
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
+  justify-content: left;
+  background-color: #ffffff;
+  font-size: medium;
+  row-gap: 10px;
+}
+
+.First-Row{
+  background-color: #ffffff;
+  height: 8vh;
+  width: 80vw;
+  max-height: 8vh;
+  max-width: 80vw;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.Stations-Title{
+  color: #f0980b;
+  font-size: large;
+}
+
+.New-Search-button {
+  background-color: #f0980b;
+  color: #ffffff;
+  border-radius: 4px;
+  border: none;
+  padding: 1vh 1.5vw;
+  height: 4vh;
+  width: 150px;
+  font-size: small;
+}
+
