--- a/src/components/GasStationCard.css
+++ b/src/components/GasStationCard.css
@@ -14,25 +14,23 @@
 .GasStationLogo {
   align-self: center;
   justify-self: center;
-  border-color: #f0980b;
   border-style: solid;
-  border-radius: 100%;
+  border-color: #f0980b;
+  border-radius: 50%;
+  max-width: auto;
+  max-height: auto;  
+  max-width: 18vw;
+  max-height: 18vh;
   background-color: #ffffff;
-}
-
-.GasStationImage {
-  max-width: 10vw;
-  max-height: 10vh;
-  padding: 3px 5px;
-  padding-bottom: 1px;
-  padding-right: 3px;
+  margin: auto;
 }
 
 .GasStationInfo {
-  grid-column: 2;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  height: 10vh;
+  margin-right: 4vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 20vh;
   max-height: 20vh;
   width: 60vw;
   max-width: 60vw;
@@ -40,49 +38,70 @@
   background-color: #ffffff;
 }
 
+.CardFirstRow{
+  background-color: #ffffff;
+  border-radius: 25px;
+  height: 6.66vh;
+  max-height: 6.66vh;
+  width: 58vw;
+  max-width: 58vw;
+  display: inline-flex;
+  justify-content: space-between;
+}
+
 .GasStationLabel {
-  margin-top: 3px;
-  align-self: left;
-  justify-self: left;
+  border-radius: 25px;
+  height: 6.66vh;
+  max-height: 6.66vh;
   font-size: large;
   font-weight: bold;
   font-style: italic;
   background-color: #ffffff;
-  margin-bottom: -24px;
 }
 .GasStationFuelPrice {
-  margin-top: -0px;
-  align-self: center;
-  justify-self: center;
+  border-radius: 25px;
+  height: 6.66vh;
+  max-height: 6.66vh;
   background-color: #ffffff;
-  margin-bottom: -20px;
 }
 
+.CardSecondRow{
+  background-color: #ffffff;
+  border-radius: 25px;
+  height: 6.66vh;
+  max-height: 6.66vh;
+  width: 58vw;
+  max-width: 58vw;
+  align-items: flex-start;
+}
 
 .GasStationAddress {
-  align-self: center;
-  justify-self: center;
   color: #808080;
   background-color: #ffffff;
-  grid-column: span 2;
-  margin-bottom: -20px;
+}
+
+.CardThirdRow{
+  background-color: #ffffff;
+  border-radius: 25px;
+  height: 6.66vh;
+  max-height: 6.66vh;
+  width: 58vw;
+  max-width: 58vw;
+  display: inline-flex;
+  justify-content: flex-end;
 }
 
 .GasStationButton {
-  display: inline-flex;
-  align-items: center;
-  align-self: center;
-  justify-self: center;
-  justify-content: center;
-  grid-column: 2;
   background-color: #f0980b;
   color: #ffffff;
   text-decoration: none;
   border-radius: 4px;
   border: none;
-  padding: 1.25vh 3vw;
-  height: 1vh;
-  max-height: 1vh;
+  height: 2vh;
+  max-height: 2vh;
   width: 18vw;
-  max-width:18vw;
+  max-width:30px;
+  text-align: center;
+  padding: 0.75vh 7vw;
+  padding-bottom: 1.25vh;
 }
